--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ArtistsActivity"/>
-        <activity android:name=".NowPlayingActivity"/>
-        <activity android:name=".PlaylistActivity"/>
-        <activity android:name=".AlbumsActivity"/>
+        <activity android:name=".DetailsActivity"></activity>
+        <activity android:name=".ArtistsActivity" />
+        <activity android:name=".NowPlayingActivity" />
+        <activity android:name=".PlaylistActivity" />
+        <activity android:name=".AlbumsActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
