--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DetailsActivity"></activity>
-        <activity android:name=".ArtistsActivity" />
-        <activity android:name=".NowPlayingActivity" />
-        <activity android:name=".PlaylistActivity" />
-        <activity android:name=".AlbumsActivity" />
+        <activity
+            android:name=".DetailsActivity"
+            android:label="@string/details_label"
+            android:parentActivityName=".MainActivity"/>
+        <activity android:name=".ArtistsActivity"
+            android:label="@string/artist_label"/>
+        <activity android:name=".NowPlayingActivity"
+            android:label="@string/now_playing_label"
+            android:parentActivityName=".MainActivity"/>
+        <activity android:name=".PlaylistActivity"
+            android:label="@string/playlist_label"/>
+        <activity android:name=".AlbumsActivity"
+            android:label="@string/album_label"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
